# dummy_gripper_mini

dummy2-gripperv2_description/: package.xml  setup.cfg  setup.py
dummy2-gripperv2_description/launch/: display.launch.py  gazebo.launch.py
dummy2-gripperv2_description/meshes/: camera_1.stl  link6_1.stl
dummy2-gripperv2_description/urdf/: dummy2-gripperv2.trans  dummy2-gripperv2.xacro
dummy2-gripperv2_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
dummy2-gripperv2_moveit_config/config/: dummy2-gripperv2.ros2_control.xacro  dummy2-gripperv2.srdf  dummy2-gripperv2.urdf.xacro  initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  ros2_controllers.yaml
dummy2-gripperv2_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
dummy2_gripper_description/: package.xml  setup.cfg  setup.py
dummy2_gripper_description/config/: dummy2.rviz
dummy2_gripper_description/launch/: display_dummy_rviz.launch.py
dummy2_gripper_description/meshes/: base_link.stl  figer1_1.stl  figer2_1.stl  link1_1.stl  link3_1.stl  link4_1.stl  link5_1.stl
dummy2_gripper_description/urdf/: dummy2-gripperv2.gazebo  dummy2-gripperv2.xacro  materials.xacro
dummy_moveit_contorl/: CMakeLists.txt  package.xml
dummy_moveit_contorl/src/: moveit_pose.cpp
moveit_dummy2_config/: .setup_assistant  CMakeLists.txt  package.xml
moveit_dummy2_config/config/: moveit.rviz  (+9 more)
mtc_dummy/: CMakeLists.txt  package.xml
(+12 files in other folders)
